--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>TV Info</title>
 
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -37,53 +37,6 @@
             </div>
         </form>
     </div>
-
-    <!--hardcoded show-->
-    <!--     <div id="showContainer" class="px-3">
-
-        <div id="showImg">
-            <img src="3.jpg" alt="show image" id="showImg">
-        </div>
-
-        <div id="showSummary">
-            <h3 id="showTitle">Game of Thrones</h3>
-
-            <p>
-                Based on the bestselling book series A Song of Ice and Fire by George R.R. Martin, this sprawling new
-                HBO
-                drama is set in a world where summers span decades and winters can last a lifetime. From the scheming
-                south
-                and the savage eastern lands, to the frozen north and ancient Wall that protects the realm from the
-                mysterious darkness beyond, the powerful families of the Seven Kingdoms are locked in a battle for the
-                Iron
-                Throne. This is a story of duplicity and treachery, nobility and honor, conquest and triumph. In the
-                Game of
-                Thrones, you either win or you die.
-            </p>
-
-            <div class="moreInfo">
-                <button id="cast" class="btn btn-success mt-3 mx-1 px-3">
-                    Cast Info
-                </button>
-                <button id="eps" class="btn btn-success mt-3 mx-1 px-3">
-                    Episode List
-                </button>
-                <button id="seasons" class="btn btn-success mt-3 mx-1 px-3">
-                    Seasons
-                </button>
-            </div>
-
-        </div>
-
-        <div id="showInfo">
-            <p>Premiered: 2011-04-17</p>
-            <p>Status: Ended on 2019-05-19</p>
-            <p>Genre(s): Drama, Adventure, Fantasy</p>
-            <p>Rating: 9/10</p>
-        </div>
-    </div> -->
-
-    <!-- <h3 id="error" class="py-3">No Shows Found :(</h3> -->
 
     <!--Bootstrap scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
