--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
         </a>
     </nav>
 
-    <div id="formContainer" class="form-group px-2 align-items-center">
+    <form action="" class="form-group pt-3 px-2" id="searchForm">
+        <div class="input-group">
+            <input type="search" class="form-control rounded" placeholder="Search TV Show" aria-label="Search"
+                aria-describedby="search-addon" name="query" id="search" />
+            <button type="submit" class="btn btn-outline-primary">Search</button>
+        </div>
+    </form>
+    <!--     <div id="formContainer" class="form-group px-2 align-items-center">
         <form action="" class="form-group pt-3 px-2" id="searchForm">
             <div class="form-group">
                 <label for="">Enter TV Show: </label>
@@ -36,7 +43,7 @@
                     <span class="px-1">Search</span></button>
             </div>
         </form>
-    </div>
+    </div> -->
 
     <!--Bootstrap scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
